changement de l'interface supression du echoserver qui sert a rien premiere version isAlive

--- a/resources.qrc
+++ b/resources.qrc
@@ -14,5 +14,6 @@
         <file>syntaxhelper.cpp</file>
         <file>syntaxhelper.h</file>
         <file>vikaword.h</file>
+        <file>mainWindow.qml</file>
     </qresource>
 </RCC>
