--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,56 +6,93 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>372</width>
-    <height>467</height>
+    <width>616</width>
+    <height>485</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>322</width>
+    <height>311</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QListWidget" name="lst_devices">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>20</y>
-      <width>351</width>
-      <height>411</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="lbl_currentDevice">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>0</y>
-      <width>101</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Current devices</string>
-    </property>
-   </widget>
-  </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>372</width>
-     <height>20</height>
-    </rect>
+   <property name="minimumSize">
+    <size>
+     <width>322</width>
+     <height>307</height>
+    </size>
    </property>
-   <widget class="QMenu" name="menuVika">
-    <property name="title">
-     <string>Vika </string>
-    </property>
-   </widget>
-   <addaction name="menuVika"/>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QTabWidget" name="tabWidget">
+      <property name="minimumSize">
+       <size>
+        <width>301</width>
+        <height>291</height>
+       </size>
+      </property>
+      <property name="tabPosition">
+       <enum>QTabWidget::North</enum>
+      </property>
+      <property name="tabShape">
+       <enum>QTabWidget::Rounded</enum>
+      </property>
+      <property name="currentIndex">
+       <number>1</number>
+      </property>
+      <widget class="QWidget" name="actionTab">
+       <property name="minimumSize">
+        <size>
+         <width>300</width>
+         <height>266</height>
+        </size>
+       </property>
+       <attribute name="title">
+        <string>Actions</string>
+       </attribute>
+      </widget>
+      <widget class="QWidget" name="modeTab">
+       <property name="minimumSize">
+        <size>
+         <width>300</width>
+         <height>266</height>
+        </size>
+       </property>
+       <attribute name="title">
+        <string>Modes</string>
+       </attribute>
+       <widget class="QPushButton" name="AddModeButton">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>410</y>
+          <width>581</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>80</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Add Mode</string>
+        </property>
+       </widget>
+      </widget>
+     </widget>
+    </item>
+   </layout>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <tabstops>
+  <tabstop>tabWidget</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
